bindings/php/revault_ffi.h

typedef unsigned char bool;
typedef unsigned char uint8_t;
typedef unsigned short uint16_t;
typedef unsigned int uint32_t;
typedef unsigned long uint64_t;
typedef unsigned long size_t;
typedef struct { uint8_t *ptr; size_t len; } RevaultBuffer;
uint32_t api_abi_version(void);
const char *buffer_last_error(void);
RevaultBuffer buffer_last_error_details(void);
void buffer_free(RevaultBuffer value);
bool secret_len(const void *handle, size_t *out_len);
bool secret_copy(const void *handle, uint8_t *destination, size_t destination_len);
void secret_free(void *handle);
uint16_t lockbox_format_version(void);
uint16_t lockbox_probe_format_version(const uint8_t *bytes, size_t len);
void *lockbox_create(const uint8_t *key, size_t key_len);
void *lockbox_create_with_options(const uint8_t *key, size_t key_len, const char *cache_mode, size_t cache_len, uint64_t cache_bytes, const char *workload, size_t workload_len, const char *worker, size_t worker_len, size_t jobs);
void *lockbox_create_password(const uint8_t *password, size_t len);
void *lockbox_create_contact(const void *contact);
void *lockbox_create_with_signing_key(const uint8_t *content_key, size_t key_len, const void *signing_key);
// END generated file operation declaration
/** Opens existing in-memory archive bytes. */
void *lockbox_open(const uint8_t *archive, size_t archive_len, const uint8_t *key, size_t key_len);
void *lockbox_open_with_options(const uint8_t *archive, size_t archive_len, const uint8_t *key, size_t key_len, const char *cache_mode, size_t cache_len, uint64_t cache_bytes, const char *workload, size_t workload_len, const char *worker, size_t worker_len, size_t jobs);
void *lockbox_open_password(const uint8_t *archive, size_t archive_len, const uint8_t *password, size_t password_len);
void *lockbox_open_contact(const uint8_t *archive, size_t archive_len, const void *contact);
bool lockbox_add_file(void *handle, const char *path, size_t path_len, const uint8_t *data, size_t data_len, bool replace);
bool lockbox_add_file_with_permissions(void *handle, const char *path, size_t path_len, const uint8_t *data, size_t data_len, uint32_t permissions, bool replace);
RevaultBuffer lockbox_get_file(const void *handle, const char *path, size_t path_len);
bool lockbox_extract_file(const void *handle, const char *source, size_t source_len, const char *destination, size_t destination_len, bool replace);
bool lockbox_extract_directory(const void *handle, const char *destination, size_t destination_len, uint64_t max_file_bytes, uint64_t max_total_bytes, size_t max_files, bool restore_symlinks, bool restore_permissions, bool overwrite);
RevaultBuffer lockbox_stream_content(const void *handle, bool physical);
RevaultBuffer lockbox_cache_stats(const void *handle);
RevaultBuffer lockbox_import_stats(const void *handle);
bool vault_platform_set_scope(const char *scope, size_t len);
bool vault_platform_forget_password(void);
bool vault_platform_put_password(const uint8_t *password, size_t len);
bool vault_platform_enable(void);
bool vault_platform_disable(void);
bool vault_platform_disabled(void);
RevaultBuffer vault_platform_get_password(void);
RevaultBuffer vault_default_directory(void);
RevaultBuffer vault_default_path(void);
RevaultBuffer vault_agent_log_path(void);
RevaultBuffer vault_agent_log_destination(void);
RevaultBuffer vault_agent_get_vault_unlock_key(const char *vault_id, size_t vault_id_len);
bool vault_agent_put_vault_unlock_key(const char *vault_id, size_t vault_id_len, const uint8_t *key, size_t key_len, uint64_t ttl_seconds);
bool vault_agent_forget_vault_unlock_key(const char *vault_id, size_t vault_id_len);
void *vault_agent_get_owner_signing_key(const char *vault_id, size_t vault_len, const char *profile, size_t profile_len);
bool vault_agent_put_owner_signing_key(const char *vault_id, size_t vault_len, const char *profile, size_t profile_len, const void *key, uint64_t ttl_seconds);
bool vault_agent_forget_owner_signing_key(const char *vault_id, size_t vault_len, const char *profile, size_t profile_len);
void *vault_agent_begin_activity(const char *kind, size_t len);
void vault_agent_end_activity(void *handle);
void *vault_local(void);
void *vault_create_lockbox_password(const void *vault, const char *path, size_t path_len, const uint8_t *password, size_t password_len);
void *vault_open_lockbox_password(const void *vault, const char *path, size_t path_len, const uint8_t *password, size_t password_len);
void *vault_create_lockbox_content_key(const void *vault, const char *path, size_t path_len, const uint8_t *content_key, size_t key_len, const void *signing_key);
void *vault_create_lockbox_contact(const void *vault, const char *path, size_t path_len, const void *contact, const char *name, size_t name_len, const void *signing_key);
void *vault_open_lockbox_content_key(const void *vault, const char *path, size_t path_len, const uint8_t *content_key, size_t key_len, const void *signing_key);
bool vault_cache_lockbox_password(const void *vault, const char *path, size_t path_len, const uint8_t *password, size_t password_len, uint64_t ttl_seconds);
bool vault_close_lockbox(const void *vault, const char *path, size_t path_len);
bool vault_close_all(const void *vault);
void vault_free(void *vault);