bindings/dart/lib/src/revault_native.dart

          >('vault_platform_set_scope'),
      _vault_platform_forget_password = library
          .lookupFunction<
            _VaultPlatformForgetPasswordNative,
            _VaultPlatformForgetPasswordDart
          >('vault_platform_forget_password'),
      _vault_platform_put_password = library
          .lookupFunction<
            _VaultPlatformPutPasswordNative,
            _VaultPlatformPutPasswordDart
          >('vault_platform_put_password'),
      _vault_platform_enable = library
          .lookupFunction<_VaultPlatformEnableNative, _VaultPlatformEnableDart>(
            'vault_platform_enable',
          ),
      _vault_platform_disable = library
          .lookupFunction<
            _VaultPlatformDisableNative,
            _VaultPlatformDisableDart
          >('vault_platform_disable'),
      _vault_platform_disabled = library
          .lookupFunction<
            _VaultPlatformDisabledNative,
            _VaultPlatformDisabledDart
          >('vault_platform_disabled'),
      _vault_platform_get_password = library
          .lookupFunction<
            _VaultPlatformGetPasswordNative,
            _VaultPlatformGetPasswordDart
          >('vault_platform_get_password'),
      _vault_default_directory = library
          .lookupFunction<
            _VaultDefaultDirectoryNative,
            _VaultDefaultDirectoryDart
          >('vault_default_directory'),
      _vault_default_path = library
          .lookupFunction<_VaultDefaultPathNative, _VaultDefaultPathDart>(
            'vault_default_path',
          ),
      _vault_agent_log_path = library
          .lookupFunction<_VaultAgentLogPathNative, _VaultAgentLogPathDart>(
            'vault_agent_log_path',
          ),
      _vault_agent_log_destination = library
          .lookupFunction<
            _VaultAgentLogDestinationNative,
            _VaultAgentLogDestinationDart
          >('vault_agent_log_destination'),
      _vault_agent_get_vault_unlock_key = library
          .lookupFunction<
            _VaultAgentGetVaultUnlockKeyNative,
            _VaultAgentGetVaultUnlockKeyDart
          >('vault_agent_get_vault_unlock_key'),
      _vault_agent_put_vault_unlock_key = library
          .lookupFunction<
            _VaultAgentPutVaultUnlockKeyNative,
            _VaultAgentPutVaultUnlockKeyDart
          >('vault_agent_put_vault_unlock_key'),
      _vault_agent_forget_vault_unlock_key = library
          .lookupFunction<
            _VaultAgentForgetVaultUnlockKeyNative,
            _VaultAgentForgetVaultUnlockKeyDart
          >('vault_agent_forget_vault_unlock_key'),
      _vault_agent_get_owner_signing_key = library
          .lookupFunction<
            _VaultAgentGetOwnerSigningKeyNative,
            _VaultAgentGetOwnerSigningKeyDart
          >('vault_agent_get_owner_signing_key'),
      _vault_agent_put_owner_signing_key = library
          .lookupFunction<
            _VaultAgentPutOwnerSigningKeyNative,
            _VaultAgentPutOwnerSigningKeyDart
          >('vault_agent_put_owner_signing_key'),
      _vault_agent_forget_owner_signing_key = library
          .lookupFunction<
            _VaultAgentForgetOwnerSigningKeyNative,
            _VaultAgentForgetOwnerSigningKeyDart
          >('vault_agent_forget_owner_signing_key'),
      _vault_agent_begin_activity = library
          .lookupFunction<
            _VaultAgentBeginActivityNative,
            _VaultAgentBeginActivityDart
          >('vault_agent_begin_activity'),
      _vault_agent_end_activity = library
          .lookupFunction<
            _VaultAgentEndActivityNative,
            _VaultAgentEndActivityDart
          >('vault_agent_end_activity'),
      _vault_local = library.lookupFunction<_VaultLocalNative, _VaultLocalDart>(
        'vault_local',
      ),
      _vault_create_lockbox_password = library
          .lookupFunction<
            _VaultCreateLockboxPasswordNative,
            _VaultCreateLockboxPasswordDart
          >('vault_create_lockbox_password'),
      _vault_open_lockbox_password = library
          .lookupFunction<
            _VaultOpenLockboxPasswordNative,
            _VaultOpenLockboxPasswordDart
          >('vault_open_lockbox_password'),
      _vault_create_lockbox_content_key = library
          .lookupFunction<
            _VaultCreateLockboxContentKeyNative,
            _VaultCreateLockboxContentKeyDart
          >('vault_create_lockbox_content_key'),
      _vault_create_lockbox_contact = library
          .lookupFunction<
            _VaultCreateLockboxContactNative,
            _VaultCreateLockboxContactDart
          >('vault_create_lockbox_contact'),
      _vault_open_lockbox_content_key = library
          .lookupFunction<
            _VaultOpenLockboxContentKeyNative,
            _VaultOpenLockboxContentKeyDart
          >('vault_open_lockbox_content_key'),
      _vault_cache_lockbox_password = library
          .lookupFunction<
            _VaultCacheLockboxPasswordNative,
            _VaultCacheLockboxPasswordDart
          >('vault_cache_lockbox_password'),
      _vault_close_lockbox = library
          .lookupFunction<_VaultCloseLockboxNative, _VaultCloseLockboxDart>(
            'vault_close_lockbox',
          ),
      _vault_close_all = library
          .lookupFunction<_VaultCloseAllNative, _VaultCloseAllDart>(
            'vault_close_all',
          ),
      _vault_free = library.lookupFunction<_VaultFreeNative, _VaultFreeDart>(
        'vault_free',
      );
  final _ApiAbiVersionDart _api_abi_version;
  int api_abi_version() => _api_abi_version();
  final _BufferLastErrorDart _buffer_last_error;
  ffi.Pointer<ffi.Uint8> buffer_last_error() => _buffer_last_error();
  final _BufferLastErrorDetailsDart _buffer_last_error_details;
  RevaultBuffer buffer_last_error_details() => _buffer_last_error_details();
  final _BufferFreeDart _buffer_free;
  void buffer_free(RevaultBuffer value) => _buffer_free(value);
  final _SecretLenDart _secret_len;
  bool secret_len(ffi.Pointer<ffi.Void> handle, ffi.Pointer<ffi.Size> outLen) =>
      _secret_len(handle, outLen);
  final _SecretCopyDart _secret_copy;
  bool secret_copy(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Uint8> destination,
    int destinationLen,
  ) => _secret_copy(handle, destination, destinationLen);
  final _SecretFreeDart _secret_free;
  void secret_free(ffi.Pointer<ffi.Void> handle) => _secret_free(handle);
  final _LockboxFormatVersionDart _lockbox_format_version;
  int lockbox_format_version() => _lockbox_format_version();
  final _LockboxProbeFormatVersionDart _lockbox_probe_format_version;
  int lockbox_probe_format_version(ffi.Pointer<ffi.Uint8> bytes, int len) =>
      _lockbox_probe_format_version(bytes, len);
  final _LockboxCreateDart _lockbox_create;
  ffi.Pointer<ffi.Void> lockbox_create(
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
  ) => _lockbox_create(key, key_len);
  final _LockboxCreateWithOptionsDart _lockbox_create_with_options;
  ffi.Pointer<ffi.Void> lockbox_create_with_options(
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> cache_mode,
    int cache_len,
    int cache_bytes,
    ffi.Pointer<ffi.Uint8> workload,
    int workload_len,
    ffi.Pointer<ffi.Uint8> worker,
    int worker_len,
    int jobs,
  ) => _lockbox_create_with_options(
    key,
    key_len,
    cache_mode,
    cache_len,
    cache_bytes,
    workload,
    workload_len,
    worker,
    worker_len,
    jobs,
  );
  final _LockboxCreatePasswordDart _lockbox_create_password;
  ffi.Pointer<ffi.Void> lockbox_create_password(
    ffi.Pointer<ffi.Uint8> password,
    int len,
  ) => _lockbox_create_password(password, len);
  final _LockboxCreateContactDart _lockbox_create_contact;
  ffi.Pointer<ffi.Void> lockbox_create_contact(ffi.Pointer<ffi.Void> contact) =>
      _lockbox_create_contact(contact);
  final _LockboxCreateWithSigningKeyDart _lockbox_create_with_signing_key;
  ffi.Pointer<ffi.Void> lockbox_create_with_signing_key(
    ffi.Pointer<ffi.Uint8> content_key,
    int key_len,
    ffi.Pointer<ffi.Void> signing_key,
  ) => _lockbox_create_with_signing_key(content_key, key_len, signing_key);
  final _LockboxOpenDart _lockbox_open;
  ffi.Pointer<ffi.Void> lockbox_open(
    ffi.Pointer<ffi.Uint8> archive,
    int archive_len,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
  ) => _lockbox_open(archive, archive_len, key, key_len);
  final _LockboxOpenWithOptionsDart _lockbox_open_with_options;
  ffi.Pointer<ffi.Void> lockbox_open_with_options(
    ffi.Pointer<ffi.Uint8> archive,
    int archive_len,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> cache_mode,
    int cache_len,
    int cache_bytes,
    ffi.Pointer<ffi.Uint8> workload,
    int workload_len,
    ffi.Pointer<ffi.Uint8> worker,
    int worker_len,
    int jobs,
  ) => _lockbox_open_with_options(
    archive,
    archive_len,
    key,
    key_len,
    cache_mode,
    cache_len,
    cache_bytes,
    workload,
    workload_len,
    worker,
    worker_len,
    jobs,
  );
  final _LockboxOpenPasswordDart _lockbox_open_password;
  ffi.Pointer<ffi.Void> lockbox_open_password(
    ffi.Pointer<ffi.Uint8> archive,
    int archive_len,
    ffi.Pointer<ffi.Uint8> password,
    int password_len,
  ) => _lockbox_open_password(archive, archive_len, password, password_len);
  final _LockboxOpenContactDart _lockbox_open_contact;
  ffi.Pointer<ffi.Void> lockbox_open_contact(
    ffi.Pointer<ffi.Uint8> archive,
    int archive_len,
    ffi.Pointer<ffi.Void> contact,
  ) => _lockbox_open_contact(archive, archive_len, contact);
  final _LockboxAddFileDart _lockbox_add_file;
  bool lockbox_add_file(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Uint8> path,
    int path_len,
    ffi.Pointer<ffi.Uint8> data,
    int data_len,
    bool replace,
  ) => _lockbox_add_file(handle, path, path_len, data, data_len, replace);
  final _LockboxAddFileWithPermissionsDart _lockbox_add_file_with_permissions;
  bool lockbox_add_file_with_permissions(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Uint8> path,
    int path_len,
    ffi.Pointer<ffi.Uint8> data,
    int data_len,
    int permissions,
    bool replace,
  ) => _lockbox_add_file_with_permissions(
    handle,
    path,
    path_len,
    data,
    data_len,
    permissions,
    replace,
  );
  final _LockboxGetFileDart _lockbox_get_file;
  RevaultBuffer lockbox_get_file(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Uint8> path,
    int path_len,
  ) => _lockbox_get_file(handle, path, path_len);
  final _LockboxExtractFileDart _lockbox_extract_file;
  bool lockbox_extract_file(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Uint8> source,
    int source_len,
    ffi.Pointer<ffi.Uint8> destination,
    int destination_len,
    bool replace,
  ) => _lockbox_extract_file(
    handle,
    source,
    source_len,
    destination,
    destination_len,
    replace,
  );
  final _LockboxExtractDirectoryDart _lockbox_extract_directory;
  bool lockbox_extract_directory(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Uint8> destination,
    int destination_len,
    int max_file_bytes,
    int max_total_bytes,
    int max_files,
    bool restore_symlinks,
    bool restore_permissions,
    bool overwrite,
  ) => _lockbox_extract_directory(
    handle,
    destination,
    destination_len,
    max_file_bytes,
    max_total_bytes,
    max_files,
    restore_symlinks,
    restore_permissions,
    overwrite,
  );
  final _LockboxStreamContentDart _lockbox_stream_content;
  RevaultBuffer lockbox_stream_content(
    ffi.Pointer<ffi.Void> handle,
    bool physical,
  ) => _lockbox_stream_content(handle, physical);
  final _LockboxCacheStatsDart _lockbox_cache_stats;
  RevaultBuffer lockbox_cache_stats(ffi.Pointer<ffi.Void> handle) =>
      _lockbox_cache_stats(handle);
  final _LockboxImportStatsDart _lockbox_import_stats;
  RevaultBuffer lockbox_import_stats(ffi.Pointer<ffi.Void> handle) =>
      _lockbox_import_stats(handle);
